--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
   "author": "lance fallon",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.12.0",
-    "browserify": "^13.0.1",
-    "flux": "^2.1.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^4.1.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-open": "^2.0.0",
-    "history": "^1.13.1",
-    "react": "*",
-    "react-dom": "^15.2.0",
-    "react-router": "^2.5.2",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "axios": "^0.9.1",
+    "express": "^4.13.4",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "webpack": "^1.12.13"
   }
 }
