--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "default": "watchify src/main.jsx -v -t [ babelify --presets [ react ] ] -o public/js/main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "bower install && gulp start"
+    "start": "./node_modules/bower/bin/bower install && gulp start"
   },
   "author": "lance fallon",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.12.0",
+    "bower": "^1.7.9",
     "browserify": "^13.0.1",
     "flux": "^2.1.1",
     "gulp": "^3.9.1",
