--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jquery": "^3.1.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.13"
+    "webpack": "^1.12.13",
+    "sass-loader": "3.1.2",
+    "node-sass": "3.4.2"
   }
 }
