--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.6",
-    "foundation-sites": "~6.2.3"
+    "foundation-sites": "~6.2.3",
+    "jquery": "~3.1.0"
   }
 }
