--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.12.0",
     "browserify": "^13.0.1",
+    "express": "^4.14.0",
     "flux": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
