--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-weather",
+  "name": "boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "start": "watchify src/main.jsx -v -t [ babelify --presets [ react ] ] -o public/js/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "lance fallon",
-  "license": "ISC",
+  "author": "Andrew Mead",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.9.1",
     "express": "^4.13.4",
@@ -23,12 +23,12 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "foundation-sites": "^6.2.3",
-    "jquery": "^3.1.0",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.13",
-    "sass-loader": "3.1.2",
-    "node-sass": "3.4.2"
+    "foundation-sites": "^6.2.0",
+    "jquery": "^2.2.1",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.13"
   }
 }
